--- a/layout.html
+++ b/layout.html
@@ -6,19 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Layout</title>
     <style>
-        .position_relative{
+        .position_relative {
             width: 300px;
             height: 300px;
             border: solid 3px red;
-            left: 100px; 
+            left: 100px;
             position: relative;
         }
 
+        .position_fixed{
+            width: 50px;
+            height: 50px;
+            background-color: green;
+            border-radius: 100px;
+            position: fixed;
+            right: 10px;
+            bottom: 10px;
+        }
     </style>
 </head>
 
 <body>
     <div class="position_relative">
+
+    </div>
+
+    <div class="position_fixed">
 
     </div>
 
