--- a/layout.html
+++ b/layout.html
@@ -14,7 +14,7 @@
             position: relative;
         }
 
-        .position_fixed{
+        .position_fixed {
             width: 50px;
             height: 50px;
             background-color: green;
@@ -23,16 +23,37 @@
             right: 10px;
             bottom: 10px;
         }
+        .main_div{
+            width: 300px;
+            height: 500px;
+            border: 2px solid orange;
+            position: relative;
+        }
+        .position_absolute{
+            width: 100px;
+            height: 100px;
+            background-color: aqua;
+            position: absolute;
+            bottom: 0;
+            right: 0; 
+        }
     </style>
 </head>
 
 <body>
+
     <div class="position_relative">
 
     </div>
 
     <div class="position_fixed">
 
+    </div>
+
+    <div class="main_div">
+        <div class="position_absolute">
+
+        </div>
     </div>
 
 
