--- a/layout.html
+++ b/layout.html
@@ -37,6 +37,13 @@
             bottom: 0;
             right: 0; 
         }
+        .postion_sticky{
+            width: 100%;
+            height: 50px;
+            background-color: black;
+            position: sticky;
+            top: 0;
+        }
     </style>
 </head>
 
@@ -47,6 +54,10 @@
     </div>
 
     <div class="position_fixed">
+
+    </div>
+
+    <div class="postion_sticky">
 
     </div>
 
