--- a/combinators.html
+++ b/combinators.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Combinators</title>
     <style>
-         div p{ /*descendant selector*/
+        /*descendant selector (space)*/
+         /* div p{ 
            color: red; 
+        } */
+
+        /* child selector (>) */
+        div>p{
+            color: red;
         }
     </style>
 </head>
@@ -20,6 +26,7 @@
             <p>P tag inside section
             </p>
         </section>
+        <p>p tag outside section but inside div</p>
 
     </div>
     <p>p tag outside div</p>
