--- a/combinators.html
+++ b/combinators.html
@@ -34,10 +34,24 @@
         p::first-line {
             color: green;
         }
+
+        div {
+            width: 50px;
+            height: 50px;
+            background-color: red;
+        }
+
+        div:hover {
+            cursor: pointer;
+            background-color: green;
+        }
     </style>
 </head>
 
 <body>
+    <div>
+
+    </div>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint cupiditate a reprehenderit
         quam molestiae
         quisquam, quo pariatur natus, qui aperiam enim modi impedit sequi, in eligendi! Repellat voluptatum debitis
