--- a/ijse.html
+++ b/ijse.html
@@ -14,6 +14,8 @@
             height: 90px;
             width: 100%;
             background-color: aqua;
+            display: flex;
+            flex-direction: row-reverse;
         }
     </style>
 </head>
