--- a/ijse.html
+++ b/ijse.html
@@ -15,7 +15,12 @@
             width: 100%;
             background-color: aqua;
             display: flex;
-            flex-direction: row-reverse;
+
+        }
+        .navbar>li{
+            list-style-type: none;
+            display: inline;
+            margin-right: 10px;
         }
     </style>
 </head>
@@ -26,10 +31,10 @@
             <img src="assets/ijse@1x (1).png" alt="IJSE LOGO">
         </div>
         <div class="nav">
-            <ul>
+            <ul class="navbar">
                 <li>Home</li>
                 <li>Contact US</li>
-                <li>About Us</li> 
+                <li>About Us</li>
             </ul>
         </div>
     </div>
