add image to body

--- a/ijse.html
+++ b/ijse.html
@@ -10,23 +10,31 @@
             margin: 0;
         }
 
-        .header {  
-            background-color: aqua;
+        .header {
+            background-color: aliceblue;
             display: flex;
             padding: 10px 20px;
 
         }
-        .navbar>li{
+
+        .navbar>li {
             list-style-type: none;
             display: inline;
             margin-right: 10px;
             font-size: 20px;
         }
 
-        .navbar>li:hover{
+        .navbar>li:hover {
             cursor: pointer;
             color: red;
-           
+
+        }
+
+        .home-image {
+            background-image: url(assets/background.jpg);
+            height: 600px;
+            background-size: cover;
+            background-position: center;
         }
     </style>
 </head>
@@ -42,6 +50,12 @@
                 <li>Contact Us</li>
                 <li>About Us</li>
             </ul>
+        </div>
+    </div>
+
+    <div class="body">
+        <div class="home-image">
+
         </div>
     </div>
 
