--- a/ijse.html
+++ b/ijse.html
@@ -35,6 +35,18 @@
             height: 600px;
             background-size: cover;
             background-position: center;
+            position: relative;
+        }
+
+        .home-text {
+            width: 40%;
+            background-color: azure;
+            text-align: center;
+            position: absolute;
+            right: 50px;
+            top: 60px;
+            padding: 30px 40px;
+            border-radius: 20px;
         }
     </style>
 </head>
@@ -55,7 +67,14 @@
 
     <div class="body">
         <div class="home-image">
-
+            <div class="home-text">
+                <h1>Welcome to IJSE</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dicta quibusdam, vitae, at enim
+                    explicabo a asperiores obcaecati repudiandae vel, iusto autem impedit praesentium fuga velit
+                    consectetur ea odit tempore.
+                </p>
+                <a href="">Visit IJSE</a>
+            </div>
         </div>
     </div>
 
