visit ijse button css

--- a/ijse.html
+++ b/ijse.html
@@ -48,6 +48,20 @@
             padding: 30px 40px;
             border-radius: 20px;
         }
+
+        .home-text>a {
+            text-decoration: none;
+            background-color: red;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 10px;
+        }
+
+        .home-text>a:hover {
+            background-color: white;
+            color: red;
+            border: 1px solid red;
+        }
     </style>
 </head>
 
@@ -73,7 +87,7 @@
                     explicabo a asperiores obcaecati repudiandae vel, iusto autem impedit praesentium fuga velit
                     consectetur ea odit tempore.
                 </p>
-                <a href="">Visit IJSE</a>
+                <a href="https://www.ijse.lk/" target="_blank">Visit IJSE</a>
             </div>
         </div>
     </div>
