--- a/ijse.html
+++ b/ijse.html
@@ -62,6 +62,21 @@
             color: red;
             border: 1px solid red;
         }
+
+        .content {
+            display: flex;
+            /* padding-right: 10px;
+            padding-left: 10px; */
+            padding-inline: 20px;
+        }
+
+        .col-1 {
+            width: 70%;
+        }
+
+        .col-2 {
+            width: 30%;
+        }
     </style>
 </head>
 
@@ -89,6 +104,60 @@
                 </p>
                 <a href="https://www.ijse.lk/" target="_blank">Visit IJSE</a>
             </div>
+        </div>
+
+        <div class="content">
+            <div class="col-1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.</p>
+            </div>
+            <div class="col-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Natus nesciunt expedita vel atque
+                    accusantium! Sequi officia delectus optio eos ex, illum natus aliquam deleniti, pariatur soluta
+                    magni facilis consequatur voluptatibus.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+            </div>
+
         </div>
     </div>
 
