--- a/combinators.html
+++ b/combinators.html
@@ -7,8 +7,8 @@
     <title>CSS Combinators</title>
     <style>
         /*descendant selector (space)*/
-        /* div p{ 
-           color: red; 
+        /* div p {
+            color: red;
         } */
 
         /* child selector (>) */
@@ -35,7 +35,7 @@
             color: green;
         }
 
-        div {
+        /* div {
             width: 50px;
             height: 50px;
             background-color: red;
@@ -44,7 +44,7 @@
         div:hover {
             cursor: pointer;
             background-color: green;
-        }
+        } */
     </style>
 </head>
 
@@ -56,7 +56,7 @@
         quam molestiae
         quisquam, quo pariatur natus, qui aperiam enim modi impedit sequi, in eligendi! Repellat voluptatum debitis
         unde!</p>
-    <!-- <div>
+    <div>
         <p>p tag directly inside div</p>
         <section>
             <p>P tag inside section
@@ -70,7 +70,7 @@
     <section></section>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere ipsum, praesentium voluptate nulla maiores illo
         iusto est perferendis vel excepturi. Accusamus beatae qui ratione nulla omnis, incidunt tempore veritatis harum!
-    </p> -->
+    </p>
 </body>
 
 </html>
