--- a/ijse.html
+++ b/ijse.html
@@ -77,6 +77,32 @@
         .col-2 {
             width: 40%;
         }
+
+        @media(max-width :425px) {
+            .header {
+                display: block;
+                text-align: center;
+            }
+
+            .home-text {
+                width: auto;
+                right: 0;
+                margin-inline: 15px;
+                padding: 20px 20px;
+
+            }
+
+            .content {
+                display: block;
+            }
+
+            .col-1,
+            .col-2 {
+                width: auto;
+            }
+
+
+        }
     </style>
 </head>
 
