--- a/ijse.html
+++ b/ijse.html
@@ -103,6 +103,18 @@
 
 
         }
+
+        @media(min-width:425px) and (max-width:768px) {
+            .header {
+                background-color: red;
+            }
+        }
+
+        @media(min-width:768px) {
+            .header {
+                background-color: green;
+            }
+        }
     </style>
 </head>
 
