--- a/ijse.html
+++ b/ijse.html
@@ -104,7 +104,7 @@
 
         }
 
-        @media(min-width:425px) and (max-width:768px) {
+        /* @media(min-width:425px) and (max-width:768px) {
             .header {
                 background-color: red;
             }
@@ -114,7 +114,7 @@
             .header {
                 background-color: green;
             }
-        }
+        } */
     </style>
 </head>
 
