--- a/bootstrap.html
+++ b/bootstrap.html
@@ -8,6 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <style>
+        .border_class>div {
+            border: 1px solid red;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,13 +21,24 @@
     <div class="container">text with container</div>
     <div class="container-fluid">text with container fluid</div>
 
-    <div class="container">
-        <div class="row">
+    <!-- <div class="container">
+        <div class="row border_class">
             <div class="col">A</div>
             <div class="col">B</div>
             <div class="col">C</div>
         </div>
          
+    </div> -->
+
+    <div class="container">
+        <div class="row border_class">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">A</div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">B</div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">C</div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">D</div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">E</div>
+        </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
