--- a/bootstrap.html
+++ b/bootstrap.html
@@ -38,7 +38,14 @@
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">D</div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">E</div>
         </div>
+    </div>
 
+    <div class="container">
+        <div class="row border_class">
+            <div class="col-6">A</div>
+            <div class="col-2">B</div>
+            <div class="col-4">C</div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
