--- a/javascript.html
+++ b/javascript.html
@@ -10,9 +10,26 @@
 <body>
 
     <script>
-        window.alert("Hello JS");
-        document.write("Hello JS  !!!!");
-        console.log("Hello JS.. this is console")
+        // window.alert("Hello JS");
+        // document.write("Hello JS  !!!!");
+        // console.log("Hello JS.. this is console")
+
+        var x = 123;
+        let y = 123;
+        const z = 123;
+
+        console.log("x : ", x);
+        x = "ABC";
+        console.log("x after reassign : ", x);
+
+        console.log("y : ", y);
+        y = "ABC";
+        console.log("y after reassign : ", y);
+
+        console.log("z : ", z);
+        z = "ABC"; //error
+        console.log("z after reassign : ", z);
+
     </script>
 </body>
 
