--- a/javascript.html
+++ b/javascript.html
@@ -27,8 +27,26 @@
         console.log("y after reassign : ", y);
 
         console.log("z : ", z);
-        z = "ABC"; //error
+        // z = "ABC"; //error
         console.log("z after reassign : ", z);
+        console.log("===================="); 
+
+        
+        // Arithmetic operators
+
+        let maths = 80;
+        let sinhala = 75;
+        console.log("maths : ", maths);
+        console.log("sinhala : ", sinhala);
+
+        let total = maths + sinhala;
+        console.log("Total : ", total);
+
+        let avg=total/2;
+        console.log("avg : ", avg);
+
+
+
 
     </script>
 </body>
