--- a/javascript.html
+++ b/javascript.html
@@ -29,9 +29,9 @@
         console.log("z : ", z);
         // z = "ABC"; //error
         console.log("z after reassign : ", z);
-        console.log("===================="); 
+        console.log("====================");
 
-        
+
         // Arithmetic operators
 
         let maths = 80;
@@ -42,12 +42,29 @@
         let total = maths + sinhala;
         console.log("Total : ", total);
 
-        let avg=total/2;
+        let avg = total / 2;
         console.log("avg : ", avg);
 
 
+        // Assigment operators
+        let number = 55;
+        console.log("number : ", number);//55
 
+        number = number + 10;
+        console.log("number  + 10 : ", number);//65
 
+        number +=10;
+        console.log("number +=10 : ", number);//75
+
+        number -=10;
+        console.log("number -=10 : ", number);//65
+
+        number *=10;
+        console.log("number *=10 : ", number);//650
+
+        number /=10;
+        console.log("number /=10 : ", number);//65
+        
     </script>
 </body>
 
