--- a/javascript.html
+++ b/javascript.html
@@ -53,18 +53,25 @@
         number = number + 10;
         console.log("number  + 10 : ", number);//65
 
-        number +=10;
+        number += 10;
         console.log("number +=10 : ", number);//75
 
-        number -=10;
+        number -= 10;
         console.log("number -=10 : ", number);//65
 
-        number *=10;
+        number *= 10;
         console.log("number *=10 : ", number);//650
 
-        number /=10;
+        number /= 10;
         console.log("number /=10 : ", number);//65
-        
+
+        // comparison operators (< >)
+        console.log(maths > sinhala);//true
+        console.log(maths < sinhala);//false
+
+
+
+
     </script>
 </body>
 
