--- a/javascript.html
+++ b/javascript.html
@@ -69,6 +69,16 @@
         console.log(maths > sinhala);//true
         console.log(maths < sinhala);//false
 
+        // Logical Operators (&& , || , !)
+        console.log("(maths > sinhala) && (sinhala < maths) : ", (maths > sinhala) && (sinhala < maths)); //true
+        console.log("(maths > sinhala) &&  (sinhala > maths) : ", (maths > sinhala) && (sinhala > maths));//false
+
+        console.log("(maths > sinhala) || (sinhala < maths) : ", (maths > sinhala) || (sinhala < maths));//true
+        console.log("(maths > sinhala) ||  (sinhala > maths) : ", (maths > sinhala) || (sinhala > maths));//true
+
+
+        console.log(maths == 80);//true
+        console.log(!(maths == 80));//false
 
 
 
