--- a/javascript.html
+++ b/javascript.html
@@ -81,6 +81,18 @@
         console.log(!(maths == 80));//false
 
 
+        if (maths > sinhala) {
+            console.log("Maths value is greater than sinhala");
+        } else {
+            console.log("Maths value is less than sinhala");
+        }
+
+        if (maths < sinhala) {
+            console.log("Maths value is less than sinhala");
+        } else {
+            console.log("Maths value is greater than sinhala");
+        }
+
 
     </script>
 </body>
