--- a/javascript.html
+++ b/javascript.html
@@ -93,6 +93,12 @@
             console.log("Maths value is greater than sinhala");
         }
 
+        // ternary operator
+        // (condition) ? value1 : value2
+        (sinhala < maths) ? console.log("Sinhala is less than Maths") : console.log("Sinhala is greater than maths");
+
+
+
 
     </script>
 </body>
