--- a/javascript.html
+++ b/javascript.html
@@ -137,6 +137,18 @@
         }
         console.log(day);
 
+        console.log("============ For Loop ===============");
+        for (let i = 0; i < 10; i++) {
+            console.log(i);
+        }
+
+        console.log("============ While Loop ===============");
+
+        let index = 0;
+        while (index < 10) {
+            console.log(index);
+            index++;
+        }
 
 
     </script>
