--- a/javascript.html
+++ b/javascript.html
@@ -151,7 +151,17 @@
         }
 
         const cars = ["BMW", "AUDI", "BENZ"];
+
+        cars.push("LAMB")
         console.log(cars);
+        cars.pop()
+        console.log(cars);
+        console.log(cars.toString());
+        console.log("cars.at(2) : ",cars.at(2));
+
+
+
+
 
         console.log(cars[0]);
         console.log(cars[1]);
