--- a/javascript.html
+++ b/javascript.html
@@ -157,7 +157,7 @@
         cars.pop()
         console.log(cars);
         console.log(cars.toString());
-        console.log("cars.at(2) : ",cars.at(2));
+        console.log("cars.at(2) : ", cars.at(2));
 
 
 
@@ -197,6 +197,22 @@
             console.log(i);
 
         }
+
+        // Object
+        const car = {
+            "type": "BMW",
+            "color": "RED",
+            "year": "2015"
+        }
+        console.log(car);
+        console.log("Type : ", car.type);
+        console.log("Color : ", car.color);
+
+        car.color = "White"
+        console.log(car);
+        console.log("Color : ", car.color);
+
+
 
     </script>
 </body>
