--- a/javascript.html
+++ b/javascript.html
@@ -213,6 +213,30 @@
         console.log("Color : ", car.color);
 
 
+        const obj_arry = [
+            {
+                "type": "BMW",
+                "color": "RED",
+                "year": "2015"
+            },
+            {
+                "type": "AUDI",
+                "color": "White",
+                "year": "2020"
+            },
+            {
+                "type": "BENZ",
+                "color": "Black",
+                "year": "2024"
+            }
+        ]
+
+        console.log(obj_arry);
+
+        for (const element of obj_arry) {
+            console.log(element.type);
+
+        }
 
     </script>
 </body>
