--- a/javascript.html
+++ b/javascript.html
@@ -238,6 +238,24 @@
 
         }
 
+
+        // // Function
+        // function name(parameters1, parameters2) {
+        //     // code of function
+        // }
+
+        // // Arrow Function
+        // (p1, p2) => {
+        //     // code of function
+        // }
+
+        function sum(value1, value2) {
+            return value1 + value2;
+        }
+
+        let calculate_sum = sum(50, 80);
+        console.log(calculate_sum);
+
     </script>
 </body>
 
