--- a/javascript.html
+++ b/javascript.html
@@ -256,6 +256,14 @@
         let calculate_sum = sum(50, 80);
         console.log(calculate_sum);
 
+
+        console.log("=============== Arrow Function =============");
+        
+        const arrow_function = (value1, value2) => {
+            return value1 + value2;
+        }
+        console.log(arrow_function(80, 60));
+
     </script>
 </body>
 
