--- a/index.html
+++ b/index.html
@@ -91,10 +91,26 @@
             <input type="tel" id="contact" name="contact">
         </div>
         <div style="margin-bottom: 10px;">
-             <button type="button">Save Details</button>
+            <button type="button">Save Details</button>
         </div>
 
     </form>
+
+    <div id="sample_div"></div>
+
+
+    <script>
+        // let element = document.getElementById("name")
+        // console.log(element);
+
+        let sample_div = document.getElementById("sample_div")
+        console.log(sample_div);
+        sample_div.innerHTML = "ABC"
+        sample_div.style.color = "red"
+        sample_div.style.backgroundColor = "blue"
+
+
+    </script>
 </body>
 
 </html>
